# actinia-ogc-api-processes-plugin

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: linting.yml  post-pr-reviews.yml  test.yml
config/mount/: sample.ini
docker/: Dockerfile  actinia.cfg  docker-compose.yml
docker/actinia-ogc-api-processes-plugin-test/: Dockerfile  actinia-ogc-api-processes-plugin-test.cfg
docker/valkey_data/: dump.rdb
src/actinia_ogc_api_processes_plugin/: __init__.py  authentication.py  endpoints.py  main.py
src/actinia_ogc_api_processes_plugin/api/: __init__.py  conformance.py  helloworld.py  job_list.py  job_results.py  job_status_info.py  landing_page.py  process_description.py  process_execution.py  process_list.py  processlist.py  project_helloworld.py
src/actinia_ogc_api_processes_plugin/apidocs/: __init__.py  helloworld.py  job_list.py  job_results.py  job_status_info.py  landing_page.py  process_description.py  process_execution.py  process_list.py  processlist.py  project_helloworld.py
tests/: __init__.py  testsuite.py
tests/integrationtests/: __init__.py  test_conformance.py  test_job_list.py  test_job_results.py  test_job_status_info.py  test_job_status_info_delete.py  test_landing_page.py  test_processes.py  test_processes_description.py  test_processes_execution.py  test_processes_execution_grass_module.py  test_processes_execution_input_by_reference.py
tests/unittests/: __init__.py  test_api_job_status_info_delete.py  test_core_actinia_common.py  test_core_job_list.py  test_core_job_status_info.py  test_transformation.py
(+28 files in other folders)
