[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actinia-ogc-api-processes-plugin"
version = "1.0.0"
description = "An actinia-core plugin which adds OGC API Processes support to actinia-core"
readme = "README.md"
authors = [
    { name = "Carmen Tawalika"},
    { name = "Anika Weinmann"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
keywords = [
    "processing",
    "earth observation",
    "cloud-based processing",
    "rest api",
    "gis",
    "grass gis",
    "osgeo",
    "ogc-api-processes"
]
dependencies = [
    "Flask",
    "Flask-Cors>=3.0.3",
    "flask-restful-swagger-2>=0.35",
    "colorlog>=3.1.4",
    "python-json-logger",
    "requests>=2.20.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mundialis/actinia-ogc-api-processes-plugin"
Tutorial = "https://mundialis.github.io/actinia_core"
API_Docs = "https://redocly.github.io/redoc/?url=https://actinia.mundialis.de/latest/swagger.json"

[tool.flake8]
max-line-length = 79

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov actinia_ogc_api_processes_plugin --cov-report term-missing --verbose --tb=line -x -s"
testpaths = [
    "tests",
]
markers = [
    "dev: test current in development",
    "unittest: completely independent test",
    "integrationtest: integration test",
]
